--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -36,6 +36,12 @@
     <%= form.check_box :displayed %>
   </div>
 
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
