--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Image</th>
       <th>Title</th>
       <th>Author</th>
@@ -19,6 +20,7 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
+        <td><%= book.id %></td>
         <td>
           <% if book.image.attached? %>
             <%#コメントアウト image_tag book.image, height: '100', width: '100' %>
