--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -18,8 +18,8 @@
       <tr>
         <td><%= review.reviewer %></td>
         <td><%= review.title %></td>
-        <td><%= review.comment %></td>
-        <td><%= review.book %></td>
+        <td><%= simple_format( h(review.comment) ) %></td>
+        <td><%= review.book&.title %></td>
         <td><%= link_to 'Show', review %></td>
         <td><%= link_to 'Edit', edit_review_path(review) %></td>
         <td><%= link_to 'Destroy', review, method: :delete, data: { confirm: 'Are you sure?' } %></td>
